[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui_elements/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/ui_images/green_panel.png" type="Texture" id=2]
[ext_resource path="res://ui_elements/OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://ui_elements/fonts/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui_elements/fonts/kenvector_future_thin.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 5 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.509804, 0.509804, 0.509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 32.0
margin_right = -64.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
margin_right = 896.0
margin_bottom = 536.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer"]
margin_right = 896.0
margin_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 3
text = "Options"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HSeparator3" type="HSeparator" parent="TextureRect/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 107.0
margin_right = 896.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="GraphicsContainer" type="GridContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 896.0
margin_bottom = 240.0
columns = 5

[node name="ResolutionLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/GraphicsContainer"]
margin_right = 323.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Resolution"
align = 2
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="ResolutionPicker" type="OptionButton" parent="TextureRect/MarginContainer/VBoxContainer/GraphicsContainer"]
margin_left = 327.0
margin_right = 419.0
margin_bottom = 26.0
text = "600 x 800"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="TextureRect/MarginContainer/VBoxContainer/GraphicsContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 423.0
margin_right = 455.0
margin_bottom = 26.0
size_flags_horizontal = 0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/GraphicsContainer"]
margin_left = 459.0
margin_right = 569.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Fullscreen"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="FullscreenBox" type="CheckBox" parent="TextureRect/MarginContainer/VBoxContainer/GraphicsContainer"]
margin_left = 573.0
margin_right = 896.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HSeparator" type="HSeparator" parent="TextureRect/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 244.0
margin_right = 896.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_constants/separation = 32

[node name="VolumeContainer" type="GridContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 896.0
margin_bottom = 320.0
size_flags_horizontal = 3
columns = 3

[node name="SFXLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/VolumeContainer"]
margin_right = 296.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "SFX volume"
align = 2
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SFXHSlider" type="HSlider" parent="TextureRect/MarginContainer/VBoxContainer/VolumeContainer"]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="SFXValueLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/VolumeContainer"]
margin_left = 600.0
margin_right = 896.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "69"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BGMLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/VolumeContainer"]
margin_top = 22.0
margin_right = 296.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "BGM volume"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BGMHSlider" type="HSlider" parent="TextureRect/MarginContainer/VBoxContainer/VolumeContainer"]
margin_left = 300.0
margin_top = 22.0
margin_right = 596.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BGMValueLabel" type="Label" parent="TextureRect/MarginContainer/VBoxContainer/VolumeContainer"]
margin_left = 600.0
margin_top = 22.0
margin_right = 896.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.776471, 0.780392, 0.776471, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "69"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HSeparator2" type="HSeparator" parent="TextureRect/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 324.0
margin_right = 896.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="Buttons" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
modulate = Color( 0.678431, 0.72549, 0.678431, 1 )
margin_top = 431.0
margin_right = 896.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 128
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="TextureRect/MarginContainer/VBoxContainer/Buttons" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 384.0
margin_bottom = 105.0

[node name="Label" parent="TextureRect/MarginContainer/VBoxContainer/Buttons/BackButton/MarginContainer" index="0"]
margin_top = 36.0
margin_right = 368.0
margin_bottom = 57.0
text = "back"

[node name="VSeparator" type="VSeparator" parent="TextureRect/MarginContainer/VBoxContainer/Buttons"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 432.0
margin_right = 496.0
margin_bottom = 152.0
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" parent="TextureRect/MarginContainer/VBoxContainer/Buttons" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_right = 896.0
margin_bottom = 105.0
size_flags_horizontal = 11

[node name="Label" parent="TextureRect/MarginContainer/VBoxContainer/Buttons/ApplyButton/MarginContainer" index="0"]
margin_top = 36.0
margin_right = 368.0
margin_bottom = 57.0
text = "Apply"

[editable path="TextureRect/MarginContainer/VBoxContainer/Buttons/BackButton"]

[editable path="TextureRect/MarginContainer/VBoxContainer/Buttons/ApplyButton"]
